# hangul_checker

./: .gitignore  README.md  hangul_checker.py  icon.icns  pyproject.toml
hanspell/: spell_checker.py
hwpfile_checker/: file_checker.py  hwpfile.py
